# chaoxing-webui

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.isolated  FRONTEND_BACKEND_GUIDE.md  README.md  docker-compose.yml  local_backend_launcher.py  main.py  pyproject.toml  requirements.txt  start-windows.bat
api/: base.py  config.py  cookies.py  logger.py  notification.py
backend/: README.md  __init__.py  ai_config.py  db.py  invite_service.py  module_recorder.py  runner.py  server.py
deploy/: start.ps1  status.ps1  stop.ps1
deploy/nginx/: chaoxing.example.conf
frontend/: admin.html  app.js  config.js  cover.js  index.html  styles.css
frontend/login/: index.html  login.js
frontend/register/: index.html  register.js
